<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFirstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="enter the first value" />

        <EditText
            android:id="@+id/editTextFirstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"/>

        <TextView
            android:id="@+id/textViewSecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="enter the second value" />

        <EditText
            android:id="@+id/editTextSecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"/>

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButtonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />

                <RadioButton
                    android:id="@+id/radioButtonMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="*" />

                <RadioButton
                    android:id="@+id/radioButtonDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="/" />
            </RadioGroup>

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:onClick="clickButtonCalculate"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Result" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>